feat: Remove extra code and add Elanine in Console

--- a/frontend_Admin/index.html
+++ b/frontend_Admin/index.html
@@ -1,4 +1,14 @@
-<!doctype html>
+<!--
+  ############################################
+
+  █▀▀ █░░ ▄▀█ █▄░█ █ █▄░█ █▀▀
+  ██▄ █▄▄ █▀█ █░▀█ █ █░▀█ ██▄
+
+  Developed by:
+  Elanine Creatives [elanine.com]
+  ############################################
+-->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,4 +19,4 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html >
+</html>
