fix: Login Screen

--- a/frontend_Admin/index.html
+++ b/frontend_Admin/index.html
@@ -18,5 +18,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+        console.log("Designed by: \n\nElanine Creatives \n\n[elanine.com]\n")
+    </script>
   </body>
 </html>
